[package]
name = "simple_webhook_msg_sender"
version = "0.0.1"
edition = "2021"
authors = ["Rajat Rajput <rajputrajat@gmail.com>"]
description = "send a string as webhook msg to mentioned address"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rajputrajat/simple_webhook_msg_sender.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
