[package]
name = "simple_webhook_msg_sender"
version = "0.0.1"
edition = "2021"
authors = ["Rajat Rajput <rajputrajat@gmail.com>"]
description = "send a string as webhook msg to mentioned address"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rajputrajat/simple_webhook_msg_sender.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
thiserror = "1.0.30"
actix-web = "3.3.2"
reqwest = { version="0.11.6", features = [ "json" ] }
serde = { version="1.0.130", features=["derive"] }
serde_json = "1.0.68"
